macro-template/tests/ui/err/missing_hash_binding.rs
use macrotable::repeat;

fn main() {
    repeat!(T in [u8] {});
}
